@@ -29,7 +29,8 @@
    quite a bit of processing power, such a cpu very likely isn't sufficient.
    Tests revealed that a Pentium II with 266 MHz is able to handle simple games;
    a Pentium III with 500 MHz gave the impression that it could handle both
-   voice and music output smoothly.
+   voice and music output smoothly. Setting the frequency ( /F cmdline option )
+   to the minimum should reduce cpu overstrain.
 
 
    3. Usage
@@ -94,9 +95,9 @@
      /O      : Set output widget (HDA only)
      /DEV    : Set start index for device scan (HDA only)
      /DIVE   : Set "Runtime Error 200" fix for Borland apps (VSBHDA16 only)
-     /PS     : Set period size (HDA only)
+     /PS     : Set period size (HDA/ES1371/ICH/nForce only)
      /SF:fn  : Set sound font filename to load
-     /MV     : Set voice limit
+     /MV     : Set voice limit for MPU synthesizer
      /CF     : Set compatibility flags
 
     Options must be followed by the number/string, without spaces. Options /A
@@ -111,7 +112,7 @@
      volume of the real sound hardware ( hda, ac97 ).
    - /BS: the PCM buffer is used for temporary storage of PCM samples, needed
      for format conversions. The argument is the number of 4kB pages used as
-     buffer; the default value of 16 (means 64 kB) should be ok for virtual
+     buffer; the default value of 16 (means 64 kB) should be ok for virtually
      all cases, setting it too small will result in page faults.
    - /SD: purpose is to slowdown games. Needs a numeric argument, for example
      /SD100. If this argument is too high, the machine won't respond anymore.
@@ -121,9 +122,11 @@
    - /PS: "period size" is space (in bytes) for samples rendered during one
      interrupt request. A period size of 512, for example, means that about
      128 samples will be rendered ( since output is always 16-bit, stereo ).
-     This more or less determines how many interrupts per second will
-     be generated by the sound hardware.
-   - /SF: sound font must be in .sf2 format.
+     So option /PS combined with /F determine how many interrupts per second
+     will be generated by the sound hardware.
+   - /SF: sound font must be in .sf2 format. Note: to activate the MPU
+     synthesizer you'll usually have to also set the MPU port - either via the
+     BLASTER variable or the /P cmdline option.
    - /MV: setting a voice limit of 0 will trigger dynamic allocation - this
      may not work for all applications.
    - /CF: defines up to 32 bits to fine tune VSBHDA's behavior.
@@ -190,7 +193,8 @@
    if VSBHDA is to load large sound fonts, there may be no free blocks left
    below the 16MB barrier after vsbhda.exe has been launched. Then one has
    to play with XMSRes's /H option to force VSBHDA ( and perhaps even HDPMI )
-   being loaded at high physical addresses.
+   being loaded at high physical addresses, thus freeing up lower address
+   ranges.
 
 
    4.4 Jemm's NOVCPI Option
@@ -226,11 +230,14 @@
       "fast".
 
 
-   5. Error Messages
+   5. Error/Warning Messages
 
-   - "Sound card IRQ conflict": the sound hardware uses the very same IRQ number
-     than the emulated SB ( 2, 5 or 7 ). This is currently rejected ( it may
-     confuse the emulator ).
+   - "Error: sound card IRQ conflict": the sound hardware uses the very same
+     IRQ number than the emulated SB ( 2, 5 or 7 ). This is currently rejected
+     ( it may confuse the emulator ).
+
+   - "Error: no IRQ assigned to sound card": This may happen on some systems
+     if the BIOS setting "Plug & Play OS" has been set to "Yes".
 
    - "SB found - probably VSBHDA already installed": a SoundBlaster was
      detected. If it's due to an installed VSBHDA, use UNINST.COM to remove the
@@ -243,11 +250,11 @@
    - "HDPMI not installed - disable protected-mode support": running VSBHDA
      under another DPMI host is possible, but not recommended.
 
-   - "Error: Failed installing IO port trap for real-mode.": the v86-monitor
+   - "Failed installing IO port trap for real-mode": the v86-monitor
      (Qemm/Jemm) returned something unexpected when the port trapping API was
      called.
 
-   - "Error: Failed installing IO port trap for protected-mode.": the DPMI
+   - "Failed installing IO port trap for protected-mode": the DPMI
      hosts HDPMI32i/HDPMI16i are the only ones implementing the protected-mode
      port trapping API used by VSBHDA.
 
