@@ -12,6 +12,7 @@
   - HDA: reset controller if no codecs are attached.
   - cmdline option /CF added.
   - fixed: ES1371 audio driver.
+  - /F cmdline option now accepts 11025 as argument.
 
   v1.6, 10.6.2025
   - fixed: some port trap variables weren't initialized if real-mode port
